# Sole-arium_golf-tracker

./: .env.example  .gitignore  ALL_PHASES_COMPLETE.md  CLAUDE.md  IMPLEMENTATION_DIAGNOSTICS.md  README.md  TEST_CHECKLIST.txt  TEST_RESULTS_AND_FIXES.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: __init__.py  main.py
backend/agents/: __init__.py  base.py  body_calibration_agent.py  coaching_agent.py  shot_classification_agent.py  threshold_agent.py  video_intelligence_agent.py
backend/api/: __init__.py  deps.py  dto.py
backend/core/: __init__.py  colors.py  compression.py  config.py  keypoints_store.py  logging.py  performance.py  session.py  storage.py  video_validation.py
backend/orchestrator/: __init__.py  overlay_renderer.py  pipeline.py  video_processor.py
backend/phase1/: __init__.py  hit_detector.py  models.py  optical_flow_utils.py  swing_segmenter.py
backend/phase2/: __init__.py  keypoints.py
backend/phase3/: __init__.py  setup_analysis.py
backend/phase4/: __init__.py  measurements.py
backend/phase5/: __init__.py  scoring.py
backend/phase7/: slowmo.py
backend/phase8/: overlay.py
backend/tests/: __init__.py  conftest.py  test_agent4_threshold.py  test_agent5_coaching.py  test_agents.py  test_api_sprint0.py  test_biomech_metrics.py  (+9 more)
docs/: README.md  agent-prompts.md  api-contract.md  architecture.md  data-schema.md  further-plans.md  implementation-plan.md  prd.md  project-structure.md  rules.md  testing.md
frontend/: package-lock.json
scratch/: test_phase1.py  test_pipeline_runtime.py
(+25 files in other folders)
